force-app/main/default/objects/Sites__c/fields/Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Text__c</fullName>
    <formula>Opportunity__r.Account_Name_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Text</label>
    <type>Text</type>
</CustomField>