force-app/main/default/objects/Sites__c/fields/Active_Sale__c.field-meta.xml
<CustomField>
    <fullName>Active_Sale__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Sale</label>
    <type>Checkbox</type>
</CustomField>