force-app/main/default/objects/Sites__c/fields/Additional_Equipment_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Additional_Equipment_on_Site__c</fullName>
    <label>Additional Equipment on Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Diesel Genset</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Gas Genset</fullName>
            </value>
            <value>
                <fullName>Gas Turbine</fullName>
            </value>
            <value>
                <fullName>Electrolyzer</fullName>
            </value>
            <value>
                <fullName>Biogas Genset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>