force-app/main/default/objects/Sites__c/fields/Backup_Kit__c.field-meta.xml
<CustomField>
    <fullName>Backup_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MSE enabling BUK functionality?</label>
    <type>Checkbox</type>
</CustomField>