force-app/main/default/objects/Sites__c/fields/Backup_Kit_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Backup_Kit_Service_Price__c</fullName>
    <label>BUK $/kW Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>