force-app/main/default/objects/Sites__c/fields/Bills__c.field-meta.xml
<CustomField>
    <fullName>Bills__c</fullName>
    <label>Bills</label>
    <type>Url</type>
</CustomField>