force-app/main/default/objects/Sites__c/fields/BUK__c.field-meta.xml
<CustomField>
    <fullName>BUK__c</fullName>
    <formula>If(Opportunity__r.BUK__c &gt; 0, &apos;B&apos;,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUK</label>
    <type>Text</type>
</CustomField>