force-app/main/default/objects/Sites__c/fields/Bypass_Scorecard_Rules_for_Modeling_Req__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Scorecard_Rules_for_Modeling_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Scorecard Rules for Modeling Req.</label>
    <type>Checkbox</type>
</CustomField>