force-app/main/default/objects/Sites__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <formula>If(Opportunity__r.Account_Name_Text__c = &apos;NextEra Energy Resources&apos;,&apos;NEE&apos;,&apos;MSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner</label>
    <type>Text</type>
</CustomField>