force-app/main/default/objects/Sites__c/fields/Cicero_API_Call_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Cicero_API_Call_Last_Refresh__c</fullName>
    <description>Last time the Site was refreshed via a Cicero API call.</description>
    <inlineHelpText>Last time the Site was refreshed via a Cicero API call.</inlineHelpText>
    <label>Cicero API Call Last Refresh</label>
    <type>DateTime</type>
</CustomField>