force-app/main/default/objects/Sites__c/fields/Cicero_API_Call_Response__c.field-meta.xml
<CustomField>
    <fullName>Cicero_API_Call_Response__c</fullName>
    <description>This will track the latest cicero API response : success or error. Not entire response but rather if there was success or an issue and what the message was.</description>
    <inlineHelpText>This will track the latest cicero API response : success or error. Not entire response but rather if there was success or an issue and what the message was.</inlineHelpText>
    <label>Cicero API Call Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>