force-app/main/default/objects/Sites__c/fields/Does_contract_price_include_sales_tax__c.field-meta.xml
<CustomField>
    <fullName>Does_contract_price_include_sales_tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does contract price include sales tax?</label>
    <type>Checkbox</type>
</CustomField>