force-app/main/default/objects/Sites__c/fields/Electrical_Topology__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Topology__c</fullName>
    <label>Electrical Topology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grid Parallel</fullName>
            </value>
            <value>
                <fullName>Grid-connected Microgrid (operates grid-parallel)</fullName>
            </value>
            <value>
                <fullName>Grid-connected Microgrid (operates islanded)</fullName>
            </value>
            <value>
                <fullName>Grid-connected Microgrid (NWA)</fullName>
            </value>
            <value>
                <fullName>Islanded Microgrid</fullName>
            </value>
            <value>
                <fullName>Islanded then Grid-Connected Microgrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>