force-app/main/default/objects/Sites__c/fields/Elevation__c.field-meta.xml
<CustomField>
    <fullName>Elevation__c</fullName>
    <label>Elevation (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>