force-app/main/default/objects/Sites__c/fields/EPC_Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>EPC_Services_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPC Services Needed</label>
    <type>Checkbox</type>
</CustomField>