force-app/main/default/objects/Sites__c/fields/EPC_Services_Price__c.field-meta.xml
<CustomField>
    <fullName>EPC_Services_Price__c</fullName>
    <label>EPC $/kW Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>