force-app/main/default/objects/Sites__c/fields/Expected_PTO_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_PTO_Date__c</fullName>
    <label>Expected PTO Date</label>
    <type>Date</type>
</CustomField>