force-app/main/default/objects/Sites__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Financier represents the third party financing the purchase. Will be copied from parent Opportunity but can be changed.</description>
    <inlineHelpText>The Financier represents the third party financing the purchase. Will be copied from parent Opportunity but can be changed.</inlineHelpText>
    <label>Financier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites (System Owner)</relationshipLabel>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>