force-app/main/default/objects/Sites__c/fields/Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>Financing_Type__c</fullName>
    <formula>If(ISPICKVAL(Opportunity__r.Purchase_Vehicle__c,&apos;ESA&apos;),&apos;F&apos;,
If(ISPICKVAL(Opportunity__r.Purchase_Vehicle__c,&apos;Cash&apos;),&apos;C&apos;,&apos;F&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financing Type</label>
    <type>Text</type>
</CustomField>