force-app/main/default/objects/Sites__c/fields/Gas_Utility__c.field-meta.xml
<CustomField>
    <fullName>Gas_Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Gas Utility Company. Enter &quot;Not Applicable&quot; if no interconnection.</inlineHelpText>
    <label>Gas Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Sites (Gas Utility)</relationshipLabel>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>