force-app/main/default/objects/Sites__c/fields/Hardware_Price_per_kW__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Price_per_kW__c</fullName>
    <label>Hardware Price per kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>