force-app/main/default/objects/Sites__c/fields/Hydrogen_Kit__c.field-meta.xml
<CustomField>
    <fullName>Hydrogen_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hydrogen Kit</label>
    <type>Checkbox</type>
</CustomField>