force-app/main/default/objects/Sites__c/fields/Interval_Data__c.field-meta.xml
<CustomField>
    <fullName>Interval_Data__c</fullName>
    <label>Interval Data</label>
    <type>Url</type>
</CustomField>