force-app/main/default/objects/Sites__c/fields/Is_MSE_performing_full_scope_EPC__c.field-meta.xml
<CustomField>
    <fullName>Is_MSE_performing_full_scope_EPC__c</fullName>
    <label>Is MSE performing full scope EPC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>