force-app/main/default/objects/Sites__c/fields/Is_MSE_providing_vendor_support_services__c.field-meta.xml
<CustomField>
    <fullName>Is_MSE_providing_vendor_support_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MSE providing vendor support services</label>
    <type>Checkbox</type>
</CustomField>