force-app/main/default/objects/Sites__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>