force-app/main/default/objects/Sites__c/fields/LGen_Model_Prod_ID__c.field-meta.xml
<CustomField>
    <fullName>LGen_Model_Prod_ID__c</fullName>
    <description>This is the ProductId that was selected for this Site. Used by the flows.</description>
    <label>LGen Model Prod ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>