force-app/main/default/objects/Sites__c/fields/LGen_units_for_Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>LGen_units_for_Safe_Harbor__c</fullName>
    <inlineHelpText>Number of LGens required to be delivered by the Safe Harbor cutoff in order to meet the Safe Harbor threshold.</inlineHelpText>
    <label>LGens Needed in 2024</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>