force-app/main/default/objects/Sites__c/fields/MSE_Name__c.field-meta.xml
<CustomField>
    <fullName>MSE_Name__c</fullName>
    <label>MSE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>