force-app/main/default/objects/Sites__c/fields/MSE_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>MSE_Project_Name__c</fullName>
    <description>EDS-4456</description>
    <label>MSE Project Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>