force-app/main/default/objects/Sites__c/fields/Number_of_Months_to_Complete_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_to_Complete_Delivery__c</fullName>
    <inlineHelpText>The duration of the scheduled delivery in months.</inlineHelpText>
    <label>Number of Months to Complete Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>