force-app/main/default/objects/Sites__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <inlineHelpText>Click on Refresh Product Line Items button to update the Number of units.</inlineHelpText>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>