force-app/main/default/objects/Sites__c/fields/Operation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Operation_Profile__c</fullName>
    <label>Operation Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Peak Shaving</fullName>
            </value>
            <value>
                <fullName>Peak Hour Shaving</fullName>
            </value>
            <value>
                <fullName>Market Dispatch</fullName>
            </value>
            <value>
                <fullName>Backup Only</fullName>
            </value>
            <value>
                <fullName>Controller-dispatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>