force-app/main/default/objects/Sites__c/fields/Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product__c</fullName>
    <formula>If(Opportunity__r.MSE3__c &gt; 0 ,&apos;MSE3&apos;,
If(Opportunity__r.MSE3P__c &gt; 0 ,&apos;MSE3P&apos;,
If(Opportunity__r.MSE4__c&gt; 0 ,&apos;MSE4&apos;,
If(Opportunity__r.MSE5__c&gt; 0 ,&apos;MSE5&apos;,&apos;Unknown&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Product</label>
    <type>Text</type>
</CustomField>