force-app/main/default/objects/Sites__c/fields/PD_COD_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_COD_Date__c</fullName>
    <label>PD COD Date</label>
    <type>Date</type>
</CustomField>