force-app/main/default/objects/Sites__c/fields/PD_Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Expected_Delivery_Date__c</fullName>
    <label>PD Expected Delivery Date</label>
    <type>Date</type>
</CustomField>