force-app/main/default/objects/Sites__c/fields/PD_PTO_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_PTO_Date__c</fullName>
    <label>PD PTO Date</label>
    <type>Date</type>
</CustomField>