force-app/main/default/objects/Sites__c/fields/Performance_Curve__c.field-meta.xml
<CustomField>
    <fullName>Performance_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Curve</label>
    <referenceTo>Performance_Table__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>