force-app/main/default/objects/Sites__c/fields/Preferred_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Fuel_Type__c</fullName>
    <label>Primary Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Syngas</fullName>
            </value>
            <value>
                <fullName>Directed Biogas</fullName>
            </value>
            <value>
                <fullName>On-site Biogas</fullName>
            </value>
            <value>
                <fullName>RNG</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
                <isActive>false</isActive>
                <label>Biogas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>