force-app/main/default/objects/Sites__c/fields/Product_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <description>EDS-4456</description>
    <label>Product Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>