force-app/main/default/objects/Sites__c/fields/Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee__c</fullName>
    <label>Referral Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>