force-app/main/default/objects/Sites__c/fields/Safe_Harbor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Notes__c</fullName>
    <label>Safe Harbor Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>