force-app/main/default/objects/Sites__c/fields/Safe_Harbor_Path__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Path__c</fullName>
    <label>Safe Harbor Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5% Test with LGen</fullName>
            </value>
            <value>
                <fullName>5% Test with LGen - 105 days</fullName>
            </value>
            <value>
                <fullName>5% Test with BOF</fullName>
            </value>
            <value>
                <fullName>On Site Physical Work</fullName>
            </value>
            <value>
                <fullName>Offsite Physical Work</fullName>
            </value>
            <value>
                <fullName>Not Pursuing Safe Harbor</fullName>
            </value>
            <value>
                <fullName>2024 Project Execution</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>