force-app/main/default/objects/Sites__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <formula>If(Opportunity__r.EPC_Services__c &gt; 0, &apos;EPC&apos;, &apos;UNT&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>