force-app/main/default/objects/Sites__c/fields/Scheduled_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if multiple units will be delivered over a period of time.</inlineHelpText>
    <label>Scheduled Delivery</label>
    <type>Checkbox</type>
</CustomField>