force-app/main/default/objects/Sites__c/fields/SH_LGens_Needed_in_Q1_2025__c.field-meta.xml
<CustomField>
    <fullName>SH_LGens_Needed_in_Q1_2025__c</fullName>
    <label>SH LGens Needed in Q1 2025</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>