force-app/main/default/objects/Sites__c/fields/Site_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Site_ID_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site ID 18</label>
    <type>Text</type>
</CustomField>