force-app/main/default/objects/Sites__c/fields/Site_Image__c.field-meta.xml
<CustomField>
    <fullName>Site_Image__c</fullName>
    <label>Site Image</label>
    <type>Url</type>
</CustomField>