force-app/main/default/objects/Sites__c/fields/Site_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Site_Size_kW__c</fullName>
    <description>EDS-4456</description>
    <formula>Number_of_Units__c * Product_Size__c</formula>
    <label>Site Size kW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>