force-app/main/default/objects/Sites__c/fields/Stacked_Units__c.field-meta.xml
<CustomField>
    <fullName>Stacked_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stacked Units</label>
    <type>Checkbox</type>
</CustomField>