force-app/main/default/objects/Sites__c/fields/State_House__c.field-meta.xml
<CustomField>
    <fullName>State_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State House</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>State Lower Sites</relationshipLabel>
    <relationshipName>Sites5</relationshipName>
    <type>Lookup</type>
</CustomField>