force-app/main/default/objects/Sites__c/fields/State_House_District__c.field-meta.xml
<CustomField>
    <fullName>State_House_District__c</fullName>
    <formula>State_House__r.Legislative_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State House District</label>
    <type>Text</type>
</CustomField>