force-app/main/default/objects/Sites__c/fields/State_Senate__c.field-meta.xml
<CustomField>
    <fullName>State_Senate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Senate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>State Upper Sites</relationshipLabel>
    <relationshipName>Sites4</relationshipName>
    <type>Lookup</type>
</CustomField>