force-app/main/default/objects/Sites__c/fields/State_Senate_District__c.field-meta.xml
<CustomField>
    <fullName>State_Senate_District__c</fullName>
    <formula>State_Senate__r.Legislative_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Senate District</label>
    <type>Text</type>
</CustomField>