force-app/main/default/objects/Sites__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>