force-app/main/default/objects/Sites__c/fields/US_House__c.field-meta.xml
<CustomField>
    <fullName>US_House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>US House</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>National Lower Sites</relationshipLabel>
    <relationshipName>Sites3</relationshipName>
    <type>Lookup</type>
</CustomField>