force-app/main/default/objects/Sites__c/fields/US_House_District__c.field-meta.xml
<CustomField>
    <fullName>US_House_District__c</fullName>
    <formula>US_House__r.Legislative_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US House District</label>
    <type>Text</type>
</CustomField>