force-app/main/default/objects/Sites__c/fields/US_Senate_1__c.field-meta.xml
<CustomField>
    <fullName>US_Senate_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>US Senate 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>National Upper 1</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>