force-app/main/default/objects/Sites__c/fields/US_Senate_2__c.field-meta.xml
<CustomField>
    <fullName>US_Senate_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>US Senate 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>National Upper 2</relationshipLabel>
    <relationshipName>Sites2</relationshipName>
    <type>Lookup</type>
</CustomField>