force-app/main/default/objects/Sites__c/fields/US_Senate_District_1__c.field-meta.xml
<CustomField>
    <fullName>US_Senate_District_1__c</fullName>
    <formula>US_Senate_1__r.Legislative_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Senate 1 District</label>
    <type>Text</type>
</CustomField>