force-app/main/default/objects/Sites__c/fields/US_Senate_District_2__c.field-meta.xml
<CustomField>
    <fullName>US_Senate_District_2__c</fullName>
    <formula>US_Senate_2__r.Legislative_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Senate 2 District</label>
    <type>Text</type>
</CustomField>